gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway  
  http:
  - match:
    - uri:
        prefix: "/chat"
    route:
    - destination:
        host: chatbot.chatbot.svc.cluster.local
        port:
          number: 80  
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: react-chatbot.chatbot.svc.cluster.local  
        port:
          number: 80
